2004-09-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b202

	* Change: Link movies to view_photo so that users can leave comments

	* Change: Update printChildren to use some better HTML (fewed redundant nestings)

	* Change: Add some more comments to find_orphans to alleviate (my) confusion

2004-09-23  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b201

	* New: Added new method 'getParentAlbums' to classes/Album.php

	* Change: use new function in view_album.php and view_photo.php to build the returnto links

	* Fix: Allow admins to change albumname even if they are not owner.
	
	* Fix: removed unneccessary index parameter when calling rename album from view_album

2004-09-21  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b200

	* Fix: removed warnings in find_orphans

	* New: Added function for recursive counting of array elements.
	       Code by Andrew Lindeman.

	* Fix: corrected count of orphaned images. (use of the new function)

	* Fix: Added tools/despam-comments.php to list of translateable files.

	* Change: Layout of find_orphans.
	
2004-09-20  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b199

	* Change: Don't play with un-initialized vars in config wiz.

	* Change: Try and use (include|require)_once where applicable - 
	  the original thought was to try and allow block-random to be able
	  to be called without using URLs, however I'm beginning to think that
	  it's not possible.

	* Change: Extra config var so that users can tweak some more random block
	  settings (number of times we attempt to find an image before giving up -
	  they can choose performance over 'find an image every time')

	* Change: Add some more extensions to the acceptableMovieFormat list

	* Change: Remove "session.bug_compat_warn off" from the htaccess.template

	* Change: Add "register_globals off" to the htaccess.template

2004-09-19  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b198

	* Change: Mambo updates.  We can't use _() in gallery.php, because