@@ -276,3 +276,8 @@ TD, P
    border: 1px solid #000000;
    background-color: #c0c0c0;
  }
+
+.commentIndication {
+	color: red;
+	font-size: 12px;
+}
