@@ -233,3 +233,8 @@ input, select, option, textarea
  {
  }
 
+.commentIndication {
+        color: red;
+	font-weight: bold; font-size: 12px;
+	vertical-align:top;
+}
