@@ -1,6 +1,6 @@
 <?php
 $name=_("Jenskin");
 $description=_("A Skin made by Jens. It looks like the config wizard.");
-$version='1.0.3';
-$last_update='2004-30-08';
+$version='1.0.4';
+$last_update='2004-09-23';
 ?>
