@@ -1,3 +1,14 @@
+2004-09-23  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b203
+
+	* Fix: removed \n after view comments. it was in a single quotes.
+	       (caught by Christian M.)
+
+	* Change: Owner can now always see comments. global changed in classes/User.php
+
+	* Fix: view all comments was not working proper.
+
+	* New: Added css class commentIndication. (Currently only used in 'none' and 'jenskin').
+
 2004-09-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b202
 
 	* Change: Link movies to view_photo so that users can leave comments
